--- a/stories.html
+++ b/stories.html
@@ -119,7 +119,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="molodoy-i-goryachiy-xantonxsors" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/72789107_697116194135188_7652610306167085757_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&oh=ce43b4a219bbcd728253cd45712df431&oe=5E925803" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Молодой и горячий @anton_sors">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/72789107_697116194135188_7652610306167085757_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=D9Njm7pXuHYAX8jNi4d&oh=80ba75b7564bb691dbbed3aef69c2c32&oe=5E925803" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Молодой и горячий @anton_sors">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -149,7 +149,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="blagodaryu-svoego-nastavnika" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65565885_360565531528492_5041209309642367490_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&oh=017c33ba4d64a769b01cd09b5e50c2cf&oe=5DF9E67E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Благодарю своего наставника">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65565885_360565531528492_5041209309642367490_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&oh=e0f53c5becabd7ff2164e0daa64f9d1d&oe=5DFB37FE" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Благодарю своего наставника">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -159,7 +159,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="guru-po-prokachke-skorostix-osoznannosti" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/64763840_330302037897188_6833824170687191691_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&oh=74aab874a27b65e6433fb2d70a20df3d&oe=5DF9CAC7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Гуру по прокачке скорости, осознанности">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/64763840_330302037897188_6833824170687191691_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&oh=e0d21fce98f53705c23f33db1e04d70f&oe=5DFB1C47" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Гуру по прокачке скорости, осознанности">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -179,7 +179,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="kak-zhe-bez-nikh" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/64324842_450238052375448_4895999784966289500_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&oh=30926323c9b4c541993d17b7c9d4ef9b&oe=5E949A32" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Как же без них!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/64324842_450238052375448_4895999784966289500_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=udlG3eXyAPcAX8FpZ38&oh=844efcdc9fe3be2ff530fac21ec97a1d&oe=5E949A32" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Как же без них!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -189,7 +189,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="uchit-sya-nikogda-ne-pozdno" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65301904_141966533578228_5465783627397764440_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&oh=59f81fa671b913d512dd9d75caeed7b2&oe=5E78F019" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Учиться никогда не поздно!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65301904_141966533578228_5465783627397764440_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=ZeBvUIVgZDEAX9tyJ14&oh=d4f9167aa38cd909be1613cba0c57c5a&oe=5E78F019" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Учиться никогда не поздно!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -219,7 +219,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="avtomatizatsiya-do-kostey" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/61406576_825873944472795_662766041820734551_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&oh=cd7d271a1017943194f3dc8d211c1945&oe=5E83C4DA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Автоматизация до костей!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/61406576_825873944472795_662766041820734551_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&oh=5958254368b14bca4aa7a7104eb9b465&oe=5EAB51DA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Автоматизация до костей!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -259,7 +259,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxfil-myx-izmenivshie-moyu-zhizn-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/56691583_425282204950731_2074902022583625648_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&oh=d42d8a0f0a03bd1ea526f91d479664ab&oe=5DF9E33F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🎬Фильмы, изменившие мою жизнь🎥">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/56691583_425282204950731_2074902022583625648_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&oh=d542f93763ee34851f4bc9437389a399&oe=5DFB34BF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🎬Фильмы, изменившие мою жизнь🎥">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,7 +269,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="komanda---edinyy-organizm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/57442735_131839041316255_1663759534516353202_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&oh=43560918828619c59c9eaa51576b3b15&oe=5EADF980" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Команда - единый организм!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/57442735_131839041316255_1663759534516353202_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=J8zoGmDDE0EAX-PNu1D&oh=a4908634a87b563031e6c975ca2ba61f&oe=5EADF980" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Команда - единый организм!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
