--- a/error.html
+++ b/error.html
@@ -96,7 +96,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>2</span> <span><i class="fa fa-heart" aria-hidden="true"></i>188</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/61406576_825873944472795_662766041820734551_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&oh=cd7d271a1017943194f3dc8d211c1945&oe=5E83C4DA" alt="Автоматизация до костей!">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/61406576_825873944472795_662766041820734551_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&oh=5958254368b14bca4aa7a7104eb9b465&oe=5EAB51DA" alt="Автоматизация до костей!">
 							</div>
 							<div class="article-more__item-name">Автоматизация до костей!</div>
 						</a>
@@ -123,14 +123,14 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>9</span> <span><i class="fa fa-heart" aria-hidden="true"></i>105</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65565885_360565531528492_5041209309642367490_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&oh=017c33ba4d64a769b01cd09b5e50c2cf&oe=5DF9E67E" alt="Благодарю своего наставника">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/65565885_360565531528492_5041209309642367490_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&oh=e0f53c5becabd7ff2164e0daa64f9d1d&oe=5DFB37FE" alt="Благодарю своего наставника">
 							</div>
 							<div class="article-more__item-name">Благодарю своего наставника</div>
 						</a>
 							<a href="./posts/./a-vy-ob-etom-znali.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>12</span> <span><i class="fa fa-heart" aria-hidden="true"></i>96</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>13</span> <span><i class="fa fa-heart" aria-hidden="true"></i>97</span>
 								</div>
 								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/67435599_2369536936701409_8802167863431719710_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&oh=04cc1169caad322f872b67585b376e2d&oe=5E940340" alt="А вы об этом знали?">
 							</div>
@@ -150,7 +150,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>6</span> <span><i class="fa fa-heart" aria-hidden="true"></i>103</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/64763840_330302037897188_6833824170687191691_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&oh=74aab874a27b65e6433fb2d70a20df3d&oe=5DF9CAC7" alt="Гуру по прокачке скорости, осознанности">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/64763840_330302037897188_6833824170687191691_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&oh=e0d21fce98f53705c23f33db1e04d70f&oe=5DFB1C47" alt="Гуру по прокачке скорости, осознанности">
 							</div>
 							<div class="article-more__item-name">Гуру по прокачке скорости, осознанности</div>
 						</a>
@@ -159,7 +159,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>1</span> <span><i class="fa fa-heart" aria-hidden="true"></i>102</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/64324842_450238052375448_4895999784966289500_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&oh=30926323c9b4c541993d17b7c9d4ef9b&oe=5E949A32" alt="Как же без них!">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/64324842_450238052375448_4895999784966289500_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=udlG3eXyAPcAX8FpZ38&oh=844efcdc9fe3be2ff530fac21ec97a1d&oe=5E949A32" alt="Как же без них!">
 							</div>
 							<div class="article-more__item-name">Как же без них!</div>
 						</a>
