--- a/links.html
+++ b/links.html
@@ -413,7 +413,7 @@ color: #FFFFFF;
 
 
 
-						<a href="http://royalintellection.ru/" class="links-page-btn " style="
+						<a href="http://royalintellection.ru/" class="links-page-btn shake " style="
 border: 1px solid #FFFFFF;
 background: #0B3855;
 color: #FFFFFF;
@@ -424,6 +424,7 @@ color: #FFFFFF;
 							<strong>
 								Сайт
 							</strong>
+							<small>Королевское мышление</small>
 						</a>
 
 
