--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 					<div class="items-item">
 						<a href="./posts/./lichnaya-effektivnost--i-kontsentratsiya.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/89341124_2557513817819897_4515097635722457616_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=aCk7ZdgiG_kAX_iZWeG&oh=bad878acfa987ca49153404bb43545db&oe=5E9ADC58" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Личная эффективность и концентрация">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/89341124_2557513817819897_4515097635722457616_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=eSex21ix2qUAX96fkl7&oh=09e5418e2a249412aaa3534e96036b8b&oe=5E9EEFA8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Личная эффективность и концентрация">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -396,7 +396,7 @@
 									<div class="items-item__desc-datas-item"><i class="fa fa-comment-o" aria-hidden="true"></i>8</div> <div class="items-item__desc-datas-item"><i class="fa fa-heart" aria-hidden="true"></i>105</div>
 								</div>
 								<h2>4 вида медитации и деньги</h2>
-								<p>4 вида медитации и деньги<br/>⠀<br/>Итак, друзья. Разбирём, как же медитация может повлиять на ваш доход (начало темы в предыдущем посте).<br/>⠀<br/>👉 Медитация-визуализация позволяет постоянно удерживать фокус внимания на заветных целях. Представляя желаемый уровень дохода, вы всегда принимаете решения, исходя из того, приведет ли вас это к реализации задуманного. Таким образом вы двигаетесь от задачи к задаче, от одного принятого решения к другому, следуете выбранному вектору увеличения благосостояния.<br/>⠀<br/>👉 Динамическая медитация (жонглирование) разгоняет э...</p>
+								<p>4 вида медитации и деньги<br/>⠀<br/>Итак, друзья. Разберём, как же медитация может повлиять на ваш доход (начало темы в предыдущем посте).<br/>⠀<br/>👉 Медитация-визуализация позволяет постоянно удерживать фокус внимания на заветных целях. Представляя желаемый уровень дохода, вы всегда принимаете решения, исходя из того, приведет ли вас это к реализации задуманного. Таким образом вы двигаетесь от задачи к задаче, от одного принятого решения к другому, следуете выбранному вектору увеличения благосостояния.<br/>⠀<br/>👉 Динамическая медитация (жонглирование) разгоняет э...</p>
 								<p>...ЧИТАТЬ ДАЛЕЕ</p>
 							</div>
 						</a>
@@ -404,7 +404,7 @@
 					<div class="items-item">
 						<a href="./posts/./utrenniy-ritual-na-million.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87572211_1427932334077431_8166362687405432308_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=fgHZubca2nkAX9WM59v&oh=1812898512740b139708575e4a055be1&oe=5EA271D2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Утренний ритуал на миллион.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87572211_1427932334077431_8166362687405432308_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=Hu3ofzajHEAAX_U9C2F&oh=7fb2184f0461ad91002a0987dd702e7d&oe=5EA271D2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Утренний ритуал на миллион.">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -426,7 +426,7 @@
 					<div class="items-item">
 						<a href="./posts/./sportx-radost--i-samosovershenstvovanie.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/82887533_601261817394978_4729303966671273638_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=MbNud8nFJsEAX9oF_fP&oh=5bd487745cdfb04760666db2f14c522b&oe=5EA501A8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Спорт, радость и самосовершенствование.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/82887533_601261817394978_4729303966671273638_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=01jSePovWJ4AX-4Mqsh&oh=0eb1891bd3bee6b6e75b1f691107f05d&oe=5EA501A8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Спорт, радость и самосовершенствование.">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -448,7 +448,7 @@
 					<div class="items-item">
 						<a href="./posts/./biznesx-sport-i-distsiplina.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87420998_239654377070437_4763616570148005765_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=n_B7KTp25roAX8DsMPV&oh=1a349d2017ac95a777c9e8fe49906eb8&oe=5EA71710" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Бизнес, спорт и дисциплина.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87420998_239654377070437_4763616570148005765_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=n_B7KTp25roAX8DsMPV&oh=662aea6c8ed4d74793f0fbad8f291f39&oe=5EB44610" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Бизнес, спорт и дисциплина.">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -470,7 +470,7 @@
 					<div class="items-item">
 						<a href="./posts/./byt--edinym-tselym.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/80762387_238510793804645_7607580406278648190_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=dNR3vgn0PkEAX-y6W4O&oh=f7d4fe61d92b51b02ad300bf7dde04b5&oe=5EA0532B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Быть единым целым.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/80762387_238510793804645_7607580406278648190_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=B6EocYFcECYAX8IbrAq&oh=1a10e465ea2583a743d52231ab9c5217&oe=5EA0532B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Быть единым целым.">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -492,7 +492,7 @@
 					<div class="items-item">
 						<a href="./posts/./ni-shagu-nazad.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/79959932_215549459455305_3479810244313545296_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=cFXDZt2wDaYAX__oWOb&oh=a054a439b981480918445b0c7df5b0c5&oe=5E9F57A3" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ни шагу назад!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/79959932_215549459455305_3479810244313545296_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=cFXDZt2wDaYAX__oWOb&oh=8e083d7f6659816dc68addf3f8e4ce58&oe=5E9D175D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ни шагу назад!">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -514,7 +514,7 @@
 					<div class="items-item">
 						<a href="./posts/./armiya-sveta.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/73176910_397145931162540_8339369620376208692_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=bvMASkVFdTcAX9I-W9e&oh=0c0c879c623d7e79610bc8e914c2c8fa&oe=5E9FDFAA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Армия света!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/73176910_397145931162540_8339369620376208692_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=100&_nc_ohc=ck9smrdlO30AX9qlskM&oh=7f048b03cb176c866df3fe54e751c3c5&oe=5E9C8F56" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Армия света!">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -624,7 +624,7 @@
 					<div class="items-item">
 						<a href="./posts/./net-ravnykh.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/61386039_366919537282841_8765299055257521416_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=HmxNo5tenI8AX-vpa_1&oh=fc24476d9f1425e279c119e33d9d96fb&oe=5E9FA344" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Нет равных!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/61386039_366919537282841_8765299055257521416_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=5ClcWrxII-gAX-C-LFt&oh=e90aa2c4fa81ee480bcca1c2e31d838a&oe=5E9FA344" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Нет равных!">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -712,7 +712,7 @@
 					<div class="items-item">
 						<a href="./posts/./xxtroekratnoe-ura.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/60027771_119542579249796_2525778531850743550_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=wboecYBAAJUAX8hbo1-&oh=ca17b39877833f43d63b7fa6e424f468&oe=5EA0FD97" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😃Троекратное УРА!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/60027771_119542579249796_2525778531850743550_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=B5uV5P81OLQAX-BP0O_&oh=3df35620e6df4e361eb5809d7c33ca5a&oe=5E9E1469" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😃Троекратное УРА!">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -734,7 +734,7 @@
 					<div class="items-item">
 						<a href="./posts/./xxfil-myx-izmenivshie-moyu-zhizn-xx.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/56691583_425282204950731_2074902022583625648_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=yfryPDY4u80AX_544ak&oh=759d9dbbab1751aeb25440a63c420bdb&oe=5E75277F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🎬Фильмы, изменившие мою жизнь🎥">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/56691583_425282204950731_2074902022583625648_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=ZtcKuw5t3i0AX-QyYxT&oh=82e14131c07884de7fb3fd27c0ae2d29&oe=5E7678FF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🎬Фильмы, изменившие мою жизнь🎥">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
