--- a/stories.html
+++ b/stories.html
@@ -119,7 +119,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="4-vida-meditatsii-i-den-gi" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/87685940_212223403493540_1929341972712976504_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=rgZWTlBUs2oAX8bNWDq&oh=361dc14cd26926d1c4b3bebde6d7601f&oe=5EE51D4D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="4 вида медитации и деньги">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/87685940_212223403493540_1929341972712976504_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=rgZWTlBUs2oAX8bNWDq&oh=88a47d8fbaad6b662caf847fb4d3e87e&oe=5EE911CD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="4 вида медитации и деньги">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -149,7 +149,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="biznesx-sport-i-distsiplina" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87420998_239654377070437_4763616570148005765_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=5aB1mPY78qkAX_8Dp55&oh=a249d81cc3871c12484435bc8af41350&oe=5EE471F0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Бизнес, спорт и дисциплина.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87420998_239654377070437_4763616570148005765_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=NlIn0VWYmA4AX9LndjW&oh=af16c10ee61c721924681a3eac9c9192&oe=5EE86670" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Бизнес, спорт и дисциплина.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -169,7 +169,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ni-shagu-nazad" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/79959932_215549459455305_3479810244313545296_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=H4LwT8hHT6EAX9TTeVe&oh=e2a69d2e021b71328f2420d40277e439&oe=5EE4485D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ни шагу назад!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/79959932_215549459455305_3479810244313545296_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=H4LwT8hHT6EAX9TTeVe&oh=274c7afb60eb8c6412830bb0bdb01808&oe=5EE83CDD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ни шагу назад!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -199,7 +199,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="a-vy-ob-etom-znali" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/67435599_2369536936701409_8802167863431719710_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=Sr0_eXileDkAX_ic3rd&oh=9da3e398581de6a49e24bb57be372d14&oe=5EE510C0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="А вы об этом знали?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/67435599_2369536936701409_8802167863431719710_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=Sr0_eXileDkAX_ic3rd&oh=08779434ae168138010adbf2766dab4f&oe=5EE90540" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="А вы об этом знали?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -209,7 +209,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="chego-vy-zhelaete" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/66870643_1099748103552178_1354945611240989894_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=91bQpoFqRYAAX-cdptM&oh=c2431849a25295cf3eb5915487d39c16&oe=5EE44451" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Чего вы желаете?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/66870643_1099748103552178_1354945611240989894_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=110&_nc_ohc=91bQpoFqRYAAX-cdptM&oh=8079add617a85a42acdc312f648b5da5&oe=5EE838D1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Чего вы желаете?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -219,7 +219,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="vy-imeete-biznes-ili-naoborot" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/62470143_2265152940232028_5843801768079698457_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=19RDWWcQb3oAX-FiDyh&oh=62bfb25a53f379512b3e3eda67a64927&oe=5EE4F46A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Вы имеете бизнес или наоборот?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/62470143_2265152940232028_5843801768079698457_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=jAt5Fo2wlFIAX8yBHa6&oh=1da42e1994d9bc9bb54776ad36ede442&oe=5EE8E8EA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Вы имеете бизнес или наоборот?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -229,7 +229,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="net-ravnykh" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/61386039_366919537282841_8765299055257521416_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=01XgC8_tYAwAX91C7wp&oh=cd597c273e3fd2a97216f871caec2721&oe=5EE54E3C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Нет равных!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/61386039_366919537282841_8765299055257521416_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=01XgC8_tYAwAX91C7wp&oh=b075bc01d23b9e3443383c657ccdfb36&oe=5EE942BC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Нет равных!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -249,7 +249,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxfil-myx-izmenivshie-moyu-zhizn-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/56691583_425282204950731_2074902022583625648_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=2ao0ERkx5WcAX-GXt3O&oh=3cc5e62b86edb8d4c0e95cab1e51922b&oe=5EBEB5C1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🎬Фильмы, изменившие мою жизнь🎥">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/56691583_425282204950731_2074902022583625648_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=2ao0ERkx5WcAX-GXt3O&oh=f52fa804a90ec5db535dff689ac86ec7&oe=5EC00741" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🎬Фильмы, изменившие мою жизнь🎥">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,7 +269,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxblagodarnost-xx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/56569139_418096182085418_4089866511567449197_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=C_E7Y0l5FRcAX_9lqPe&oh=84e3505f88e96099acd3e90013d9a2fb&oe=5EE4E833" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤗Благодарность🏅">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/56569139_418096182085418_4089866511567449197_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=C_E7Y0l5FRcAX_9lqPe&oh=b06af82e45553359254565d92def1902&oe=5EE8DCB3" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤗Благодарность🏅">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
