--- a/error.html
+++ b/error.html
@@ -102,7 +102,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>13</span> <span><i class="fa fa-heart" aria-hidden="true"></i>188</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/66870643_1099748103552178_1354945611240989894_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=favANTpkjIIAX9-ZTHM&oh=23f06bcf13b687ee6aff957828042f00&oe=5EFFF3D1" alt="Чего вы желаете?">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/66870643_1099748103552178_1354945611240989894_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=110&_nc_ohc=favANTpkjIIAX9-ZTHM&oh=1642d8a9e0e592652675c40f28a25109&oe=5F03E851" alt="Чего вы желаете?">
 							</div>
 							<div class="article-more__item-name">Чего вы желаете?</div>
 						</a>
@@ -111,7 +111,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>14</span> <span><i class="fa fa-heart" aria-hidden="true"></i>125</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/79959932_215549459455305_3479810244313545296_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=ZySE140C7E8AX90-Zz2&oh=9d902935e89dd7b77a3f8503aeff6a1f&oe=5EFFF7DD" alt="Ни шагу назад!">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/79959932_215549459455305_3479810244313545296_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=ZySE140C7E8AX90-Zz2&oh=590caf4e3460e748c570930afc22795e&oe=5F03EC5D" alt="Ни шагу назад!">
 							</div>
 							<div class="article-more__item-name">Ни шагу назад!</div>
 						</a>
@@ -120,7 +120,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>13</span> <span><i class="fa fa-heart" aria-hidden="true"></i>123</span>
 								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/87685940_212223403493540_1929341972712976504_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=L_k08e9mzo4AX_Suceo&oh=6bed7b0352fda23eaed82be5fa82e697&oe=5F00CCCD" alt="4 вида медитации и деньги">
+								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/87685940_212223403493540_1929341972712976504_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=L_k08e9mzo4AX_Suceo&oh=496da948ec8450c8b8add311e11bfa02&oe=5F04C14D" alt="4 вида медитации и деньги">
 							</div>
 							<div class="article-more__item-name">4 вида медитации и деньги</div>
 						</a>
@@ -129,7 +129,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>13</span> <span><i class="fa fa-heart" aria-hidden="true"></i>117</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/67435599_2369536936701409_8802167863431719710_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=HQoQSbGuPmAAX9GPSPG&oh=d97c86b0b5b2c40834ea7ff6f43bb636&oe=5F00C040" alt="А вы об этом знали?">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/67435599_2369536936701409_8802167863431719710_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=HQoQSbGuPmAAX9GPSPG&oh=c369838403e29b8fce179ed7f472ec6d&oe=5F04B4C0" alt="А вы об этом знали?">
 							</div>
 							<div class="article-more__item-name">А вы об этом знали?</div>
 						</a>
@@ -147,7 +147,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>10</span> <span><i class="fa fa-heart" aria-hidden="true"></i>108</span>
 								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87420998_239654377070437_4763616570148005765_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=o1Hr5a_01mYAX99jCRP&oh=2f43d6bf92d2ff0e245456c7bf4daa0e&oe=5F002170" alt="Бизнес, спорт и дисциплина.">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87420998_239654377070437_4763616570148005765_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=7TSqiss-gKMAX_Eb0xJ&oh=9797924c84c564b2c60460b5b5bb88a7&oe=5F0415F0" alt="Бизнес, спорт и дисциплина.">
 							</div>
 							<div class="article-more__item-name">Бизнес, спорт и дисциплина.</div>
 						</a>
