--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 					<div class="items-item">
 						<a href="./posts/./4-vida-meditatsii-i-den-gi.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/87685940_212223403493540_1929341972712976504_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=L_k08e9mzo4AX_Suceo&oh=6bed7b0352fda23eaed82be5fa82e697&oe=5F00CCCD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="4 вида медитации и деньги">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/87685940_212223403493540_1929341972712976504_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=L_k08e9mzo4AX_Suceo&oh=496da948ec8450c8b8add311e11bfa02&oe=5F04C14D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="4 вида медитации и деньги">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -448,7 +448,7 @@
 					<div class="items-item">
 						<a href="./posts/./biznesx-sport-i-distsiplina.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87420998_239654377070437_4763616570148005765_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=o1Hr5a_01mYAX99jCRP&oh=2f43d6bf92d2ff0e245456c7bf4daa0e&oe=5F002170" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Бизнес, спорт и дисциплина.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/87420998_239654377070437_4763616570148005765_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=7TSqiss-gKMAX_Eb0xJ&oh=9797924c84c564b2c60460b5b5bb88a7&oe=5F0415F0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Бизнес, спорт и дисциплина.">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -492,7 +492,7 @@
 					<div class="items-item">
 						<a href="./posts/./ni-shagu-nazad.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/79959932_215549459455305_3479810244313545296_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=ZySE140C7E8AX90-Zz2&oh=9d902935e89dd7b77a3f8503aeff6a1f&oe=5EFFF7DD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ни шагу назад!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/79959932_215549459455305_3479810244313545296_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=109&_nc_ohc=ZySE140C7E8AX90-Zz2&oh=590caf4e3460e748c570930afc22795e&oe=5F03EC5D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ни шагу назад!">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -558,7 +558,7 @@
 					<div class="items-item">
 						<a href="./posts/./a-vy-ob-etom-znali.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/67435599_2369536936701409_8802167863431719710_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=HQoQSbGuPmAAX9GPSPG&oh=d97c86b0b5b2c40834ea7ff6f43bb636&oe=5F00C040" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="А вы об этом знали?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/67435599_2369536936701409_8802167863431719710_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=HQoQSbGuPmAAX9GPSPG&oh=c369838403e29b8fce179ed7f472ec6d&oe=5F04B4C0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="А вы об этом знали?">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -580,7 +580,7 @@
 					<div class="items-item">
 						<a href="./posts/./chego-vy-zhelaete.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/66870643_1099748103552178_1354945611240989894_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=favANTpkjIIAX9-ZTHM&oh=23f06bcf13b687ee6aff957828042f00&oe=5EFFF3D1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Чего вы желаете?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/66870643_1099748103552178_1354945611240989894_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=110&_nc_ohc=favANTpkjIIAX9-ZTHM&oh=1642d8a9e0e592652675c40f28a25109&oe=5F03E851" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Чего вы желаете?">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -602,7 +602,7 @@
 					<div class="items-item">
 						<a href="./posts/./vy-imeete-biznes-ili-naoborot.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/62470143_2265152940232028_5843801768079698457_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=HZQY01d6fm8AX_EU-GF&oh=1f9ef664aedda4e95663d3790c561195&oe=5F00A3EA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Вы имеете бизнес или наоборот?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/62470143_2265152940232028_5843801768079698457_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=xs9IR0IgN-MAX9_ElNS&oh=fb20cb0ddd06224c77ab1fc0f712fe16&oe=5F04986A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Вы имеете бизнес или наоборот?">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -624,7 +624,7 @@
 					<div class="items-item">
 						<a href="./posts/./net-ravnykh.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/61386039_366919537282841_8765299055257521416_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=f_Uktv70-6IAX-rjfJB&oh=63292b6fedbde95ded8d30a1d9e8a4aa&oe=5F00FDBC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Нет равных!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/61386039_366919537282841_8765299055257521416_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=105&_nc_ohc=f_Uktv70-6IAX-rjfJB&oh=f3c58e0bc59dcd0634871dcd6b747af6&oe=5F04F23C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Нет равных!">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -646,7 +646,7 @@
 					<div class="items-item">
 						<a href="./posts/./avtomatizatsiya-do-kostey.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/61406576_825873944472795_662766041820734551_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=IHXU-MSW8VgAX-DEKfx&oh=3289f24f4f8d0555c14b529053cf01ba&oe=5F012CA6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Автоматизация до костей!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/61406576_825873944472795_662766041820734551_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=IHXU-MSW8VgAX-DEKfx&oh=8807c0382687fed138f2a0d91ff1929c&oe=5F052126" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Автоматизация до костей!">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -668,7 +668,7 @@
 					<div class="items-item">
 						<a href="./posts/./xxfil-myx-izmenivshie-moyu-zhizn-xx.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/56691583_425282204950731_2074902022583625648_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=MwuC1EYbVv4AX9Mm_O8&oh=7daaa1a1a13b23df0cda885087d87962&oe=5EDA6541" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🎬Фильмы, изменившие мою жизнь🎥">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/56691583_425282204950731_2074902022583625648_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=103&_nc_ohc=MwuC1EYbVv4AX9Mm_O8&oh=564127a23342421ce2627c3d6fcb89d1&oe=5EDBB6C1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🎬Фильмы, изменившие мою жизнь🎥">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
@@ -712,7 +712,7 @@
 					<div class="items-item">
 						<a href="./posts/./xxblagodarnost-xx.html" class="items-item__wrap">
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/56569139_418096182085418_4089866511567449197_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=njFG0vlpUvoAX-Jfz88&oh=3bdb948be7cfe4d2fd86f3a7eaeda64d&oe=5F0097B3" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤗Благодарность🏅">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/56569139_418096182085418_4089866511567449197_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=njFG0vlpUvoAX-Jfz88&oh=b63bb9a870da81cc9dce08ccb8e89c11&oe=5F048C33" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤗Благодарность🏅">
 							</div>							
 							<div class="items-item__blind">
 								<div class="items-item__blind-wrap">
